--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "NODE_ENV=development tsnd --transpile-only --respawn --ignore-watch node_modules src/index.ts",
     "start": "NODE_ENV=production node dist/src/index.js",
     "build": "NODE_ENV=production rimraf dist && tsc --project tsconfig.production.json",
-    "test": "jest --passWithNoTests",
-    "test:staged": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:staged": "npm test -- --findRelatedTests",
+    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "test:watch": "jest --watchAll",
-    "postinstall": "husky install && npx husky add .husky/commit-msg \"npx --no-install commitlint --edit $1\"",
+    "postinstall": "husky install && husky add .husky/commit-msg \"npx --no-install commitlint --edit $1\" && husky add .husky/pre-commit \"npm run test\"",
     "test:coverage": "jest --coverage"
   },
   "author": "rafamaxber@gmail.com",
