--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "NODE_ENV=production node dist/src/index.js",
     "build": "NODE_ENV=production rimraf dist && tsc --project tsconfig.production.json",
     "test": "jest --passWithNoTests --runInBand --no-cache",
-    "test:staged": "npm test -- --findRelatedTests",
+    "test:staged": "jest --findRelatedTests ./src/**/*.ts --passWithNoTests",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:ci": "npm test -- --coverage",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "test:watch": "jest --watchAll",
-    "postinstall": "husky install && husky add .husky/commit-msg \"npx --no-install commitlint --edit $1\" && husky add .husky/pre-commit \"npm run test\"",
+    "postinstall": "husky install && husky add .husky/commit-msg \"npx --no-install commitlint --edit $1\" && husky add .husky/pre-commit \"npm run test:staged\"",
     "test:coverage": "jest --coverage",
     "up": "docker-compose up"
   },
@@ -24,6 +24,7 @@
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@types/bcrypt": "^3.0.0",
+    "@types/config": "^0.0.38",
     "@types/jest": "^26.0.20",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.28",
@@ -49,6 +50,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "config": "^3.3.6",
     "fast-glob": "^3.2.5",
     "fastify": "^3.14.1",
     "fastify-cors": "^5.2.0",
