--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: "3"
+version: '3'
 
 services:
   db_mysql:
     image: mysql:5.7
     ports:
-      - "3306:3306"
+      - '3306:3306'
     environment:
       MYSQL_DATABASE: ihurry
       MYSQL_ROOT_PASSWORD: supersecret
