--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development tsnd --transpile-only --respawn --ignore-watch node_modules src/index.ts",
     "start": "NODE_ENV=production node dist/src/index.js",
     "build": "NODE_ENV=production rimraf dist && tsc --project tsconfig.production.json",
-    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test": "NODE_ENV=test jest --passWithNoTests --runInBand --no-cache",
     "test:staged": "jest --findRelatedTests ./src/**/*.ts --passWithNoTests",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
@@ -16,7 +16,7 @@
     "test:watch": "jest --watchAll",
     "postinstall": "husky install && husky add .husky/commit-msg \"npx --no-install commitlint --edit $1\" && husky add .husky/pre-commit \"npm run test:staged\"",
     "test:coverage": "jest --coverage",
-    "up": "docker-compose up"
+    "up": "docker-compose up --build"
   },
   "author": "rafamaxber@gmail.com",
   "license": "UNLICENSED",
@@ -31,6 +31,7 @@
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "cardinal": "^2.1.1",
     "eslint": "^7.20.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
@@ -41,6 +42,7 @@
     "lint-staged": "^10.5.4",
     "pino-pretty": "^4.7.1",
     "prettier": "^2.2.1",
+    "sqlite3": "^5.0.2",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.2.3"
