feat: add login layer

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/config": "^0.0.38",
     "@types/jest": "^26.0.20",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.28",
     "@types/uuid": "^8.3.0",
@@ -57,6 +58,7 @@
     "fastify": "^3.14.1",
     "fastify-cors": "^5.2.0",
     "fastify-helmet": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "middie": "^5.2.0",
     "module-alias": "^2.2.2",
     "mysql2": "^2.2.5",
