--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "start": "NODE_ENV=production node dist/src/index.js",
     "build": "NODE_ENV=production rimraf dist && tsc --project tsconfig.production.json",
     "test": "NODE_ENV=test jest --passWithNoTests --runInBand --no-cache",
-    "test:staged": "jest --findRelatedTests ./src/**/*.ts --passWithNoTests",
+    "test:staged": "npm test --findRelatedTests ./src/**/*.ts --passWithNoTests -c jest-unit-config.js",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
-    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:integration": "npm run test-up && npm test -- --watch -c jest-integration-config.js && npm run test-down",
     "test:ci": "npm test -- --coverage",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "test:watch": "jest --watchAll",
     "postinstall": "husky install && husky add .husky/commit-msg \"npx --no-install commitlint --edit $1\" && husky add .husky/pre-commit \"npm run test:staged\"",
     "test:coverage": "jest --coverage",
-    "up": "docker-compose up --build"
+    "up": "docker-compose up --build -d",
+    "down": "docker-compose down --remove-orphans",
+    "test-up": "docker-compose --file docker-compose.test.yml up --build -d",
+    "test-down": "docker-compose --file docker-compose.test.yml down --remove-orphans"
   },
   "author": "rafamaxber@gmail.com",
   "license": "UNLICENSED",
@@ -54,7 +57,6 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
-    "fast-glob": "^3.2.5",
     "fastify": "^3.14.1",
     "fastify-cors": "^5.2.0",
     "fastify-helmet": "^5.3.1",
