--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
+    "dotenv": "^8.2.0",
     "fastify": "^3.14.1",
     "fastify-cors": "^5.2.0",
     "fastify-helmet": "^5.3.1",
