--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dev": "NODE_ENV=development tsnd --transpile-only --respawn --ignore-watch node_modules src/index.ts",
+    "dev": "DEBUG=i18n:* NODE_ENV=development tsnd --transpile-only --respawn --ignore-watch node_modules src/index.ts",
     "start": "NODE_ENV=production node dist/src/index.js",
     "build": "NODE_ENV=production rimraf dist && tsc --project tsconfig.production.json",
     "test": "NODE_ENV=test jest --passWithNoTests --runInBand --no-cache",
@@ -28,6 +28,7 @@
     "@commitlint/config-conventional": "^12.0.1",
     "@types/bcrypt": "^3.0.0",
     "@types/config": "^0.0.38",
+    "@types/i18n": "^0.13.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/module-alias": "^2.0.0",
@@ -61,6 +62,7 @@
     "fastify": "^3.14.1",
     "fastify-cors": "^5.2.0",
     "fastify-helmet": "^5.3.1",
+    "i18n": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
     "middie": "^5.2.0",
     "module-alias": "^2.2.2",
