--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:coverage": "jest --coverage",
     "up": "docker-compose up --build -d",
     "down": "docker-compose down --remove-orphans",
-    "test-up": "docker-compose --file docker-compose.test.yml up --build -d",
+    "test-up": "docker-compose --file docker-compose.test.yml up --build -d --remove-orphans",
     "test-down": "docker-compose --file docker-compose.test.yml down --remove-orphans"
   },
   "author": "rafamaxber@gmail.com",
