--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "dev": "DEBUG=i18n:* NODE_ENV=development tsnd --transpile-only --respawn --ignore-watch node_modules src/index.ts",
     "start": "NODE_ENV=production node dist/src/index.js",
     "build": "NODE_ENV=production rimraf dist && tsc --project tsconfig.production.json",
-    "test": "NODE_ENV=test jest --passWithNoTests --runInBand --no-cache",
-    "test:staged": "npm test --findRelatedTests ./src/**/*.ts --passWithNoTests -c jest-unit-config.js",
-    "test:unit": "npm test -- --watch -c jest-unit-config.js",
-    "test:integration": "npm run test-up && npm test -- --watch -c jest-integration-config.js && npm run test-down",
-    "test:ci": "npm test -- --coverage",
+    "test": "NODE_ENV=test concurrently \"npm run test:staged\" \"npm run test:staged:integration\"",
+    "test:setup": "jest --passWithNoTests --no-cache",
+    "test:staged": "npm run test:setup -- -c jest-unit-config.js",
+    "test:staged:integration": "npm run test-up && npm run test:setup -- --runInBand -c jest-integration-config.js && npm run test-down",
+    "test:unit": "npm run test:setup -- --watch -c jest-unit-config.js",
+    "test:integration": "npm run test-up && npm run test:setup -- --watch -c jest-integration-config.js && npm run test-down",
+    "test:ci": "npm run test:setup -- --coverage",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "test:watch": "jest --watchAll",
     "postinstall": "husky install && husky add .husky/commit-msg \"npx --no-install commitlint --edit $1\" && husky add .husky/pre-commit \"npm run test:staged\"",
     "test:coverage": "jest --coverage",
-    "up": "docker-compose up --build -d",
-    "down": "docker-compose down --remove-orphans",
+    "up": "docker compose up --build -d",
+    "down": "docker compose down --remove-orphans",
     "test-up": "docker-compose --file docker-compose.test.yml up --build -d --remove-orphans",
     "test-down": "docker-compose --file docker-compose.test.yml down --remove-orphans"
   },
@@ -37,6 +39,7 @@
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "cardinal": "^2.1.1",
+    "concurrently": "^6.0.2",
     "eslint": "^7.20.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
