--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dev": "DEBUG=i18n:* NODE_ENV=development tsnd --transpile-only --respawn --ignore-watch node_modules src/index.ts",
+    "dev-start": "DEBUG=i18n:* NODE_ENV=development tsnd --transpile-only --respawn --ignore-watch node_modules src/index.ts",
+    "dev": "npm run up && npm run dev-start && npm run down",
     "start": "NODE_ENV=production node dist/src/index.js",
     "build": "NODE_ENV=production rimraf dist && tsc --project tsconfig.production.json",
     "test": "NODE_ENV=test concurrently \"npm run test:staged\" \"npm run test:staged:integration\"",
