--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:watch": "jest --watchAll",
     "postinstall": "husky install && husky add .husky/commit-msg \"npx --no-install commitlint --edit $1\" && husky add .husky/pre-commit \"npm run test:staged\"",
     "test:coverage": "jest --coverage",
-    "up": "docker compose up --build -d",
-    "down": "docker compose down --remove-orphans",
+    "up": "docker-compose up --build -d",
+    "down": "docker-compose down --remove-orphans",
     "test-up": "docker-compose --file docker-compose.test.yml up --build -d --remove-orphans",
     "test-down": "docker-compose --file docker-compose.test.yml down --remove-orphans"
   },
@@ -32,6 +32,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/config": "^0.0.38",
     "@types/i18n": "^0.13.0",
+    "@types/ioredis": "^4.26.1",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/module-alias": "^2.0.0",
@@ -67,6 +68,7 @@
     "fastify-cors": "^5.2.0",
     "fastify-helmet": "^5.3.1",
     "i18n": "^0.13.2",
+    "ioredis": "^4.27.1",
     "jsonwebtoken": "^8.5.1",
     "middie": "^5.2.0",
     "module-alias": "^2.2.2",
